Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI708NET.VB


    Private Class BTI708_64
        Public Declare Function BTI708_ChClear Lib "BTI70864.DLL" Alias "BTI708_ChClear" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChConfig Lib "BTI70864.DLL" Alias "BTI708_ChConfig" (ByVal configval As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI708_ChGetCount Lib "BTI70864.DLL" Alias "BTI708_ChGetCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_ChGetInfo Lib "BTI70864.DLL" Alias "BTI708_ChGetInfo" (ByVal infotype As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI708_ChIs708 Lib "BTI70864.DLL" Alias "BTI708_ChIs708" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChIsRcv Lib "BTI70864.DLL" Alias "BTI708_ChIsRcv" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChIsXmt Lib "BTI70864.DLL" Alias "BTI708_ChIsXmt" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI708_ChPause Lib "BTI70864.DLL" Alias "BTI708_ChPause" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_ChPauseCheck Lib "BTI70864.DLL" Alias "BTI708_ChPauseCheck" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI708_ChResume Lib "BTI70864.DLL" Alias "BTI708_ChResume" (ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_ChStart Lib "BTI70864.DLL" Alias "BTI708_ChStart" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChStop Lib "BTI70864.DLL" Alias "BTI708_ChStop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChSyncDefine Lib "BTI70864.DLL" Alias "BTI708_ChSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChTriggerDefine Lib "BTI70864.DLL" Alias "BTI708_ChTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_FieldGetAngle Lib "BTI70864.DLL" Alias "BTI708_FieldGetAngle" (ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetAngleFl Lib "BTI70864.DLL" Alias "BTI708_FieldGetAngleFl" (ByVal buf As UInt16()) As Single
        Public Declare Function BTI708_FieldGetControlAccept Lib "BTI70864.DLL" Alias "BTI708_FieldGetControlAccept" (ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetData Lib "BTI70864.DLL" Alias "BTI708_FieldGetData" (ByVal binnum As Int32, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetDataAccept Lib "BTI70864.DLL" Alias "BTI708_FieldGetDataAccept" (ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetFaults Lib "BTI70864.DLL" Alias "BTI708_FieldGetFaults" (ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetGain Lib "BTI70864.DLL" Alias "BTI708_FieldGetGain" (ByVal buf As UInt16()) As Int32
        Public Declare Function BTI708_FieldGetLabel Lib "BTI70864.DLL" Alias "BTI708_FieldGetLabel" (ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetMode Lib "BTI70864.DLL" Alias "BTI708_FieldGetMode" (ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetRange Lib "BTI70864.DLL" Alias "BTI708_FieldGetRange" (ByVal buf As UInt16()) As Int32
        Public Declare Function BTI708_FieldGetTilt Lib "BTI70864.DLL" Alias "BTI708_FieldGetTilt" (ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldGetTiltFl Lib "BTI70864.DLL" Alias "BTI708_FieldGetTiltFl" (ByVal buf As UInt16()) As Single
        Public Declare Function BTI708_FieldPutAngle Lib "BTI70864.DLL" Alias "BTI708_FieldPutAngle" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
        Public Declare Function BTI708_FieldPutAngleFl Lib "BTI70864.DLL" Alias "BTI708_FieldPutAngleFl" (ByVal angle As Single, ByVal buf As UInt16()) As Single
        Public Declare Function BTI708_FieldPutControlAccept Lib "BTI70864.DLL" Alias "BTI708_FieldPutControlAccept" (ByVal value As UInt16, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldPutData Lib "BTI70864.DLL" Alias "BTI708_FieldPutData" (ByVal value As UInt16, ByVal binnum As Int32, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldPutDataAccept Lib "BTI70864.DLL" Alias "BTI708_FieldPutDataAccept" (ByVal value As UInt16, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldPutFaults Lib "BTI70864.DLL" Alias "BTI708_FieldPutFaults" (ByVal value As UInt16, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldPutGain Lib "BTI70864.DLL" Alias "BTI708_FieldPutGain" (ByVal gain As Int32, ByVal buf As UInt16()) As Int32
        Public Declare Function BTI708_FieldPutLabel Lib "BTI70864.DLL" Alias "BTI708_FieldPutLabel" (ByVal value As UInt16, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldPutMode Lib "BTI70864.DLL" Alias "BTI708_FieldPutMode" (ByVal value As UInt16, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldPutRange Lib "BTI70864.DLL" Alias "BTI708_FieldPutRange" (ByVal range As Int32, ByVal buf As UInt16()) As Int32
        Public Declare Function BTI708_FieldPutTilt Lib "BTI70864.DLL" Alias "BTI708_FieldPutTilt" (ByVal value As UInt16, ByVal buf As UInt16()) As UInt16
        Public Declare Function BTI708_FieldPutTiltFl Lib "BTI70864.DLL" Alias "BTI708_FieldPutTiltFl" (ByVal tilt As Single, ByVal buf As UInt16()) As Single
        Public Declare Function BTI708_MsgBlockRd Lib "BTI70864.DLL" Alias "BTI708_MsgBlockRd" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgBlockWr Lib "BTI70864.DLL" Alias "BTI708_MsgBlockWr" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgDataRd Lib "BTI70864.DLL" Alias "BTI708_MsgDataRd" (ByVal buf As UInt16(), ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgDataWr Lib "BTI70864.DLL" Alias "BTI708_MsgDataWr" (ByVal buf As UInt16(), ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgIsAccessed Lib "BTI70864.DLL" Alias "BTI708_MsgIsAccessed" (ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgSyncDefine Lib "BTI70864.DLL" Alias "BTI708_MsgSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgTriggerDefine Lib "BTI70864.DLL" Alias "BTI708_MsgTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgVarDataRd Lib "BTI70864.DLL" Alias "BTI708_MsgVarDataRd" (ByVal buf As UInt16(), ByRef bitcount As Int32, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgVarDataWr Lib "BTI70864.DLL" Alias "BTI708_MsgVarDataWr" (ByVal buf As UInt16(), ByVal bitcount As Int32, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ParamAmplitudeConfig Lib "BTI70864.DLL" Alias "BTI708_ParamAmplitudeConfig" (ByVal configval As UInt32, ByVal dacval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_RcvBuild Lib "BTI70864.DLL" Alias "BTI708_RcvBuild" (ByVal configval As UInt32, ByVal logfreq As Int32, ByVal framecount As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_XmtBuild Lib "BTI70864.DLL" Alias "BTI708_XmtBuild" (ByVal configval As UInt32, ByVal framefreq As UInt16, ByVal logfreq As Int32, ByVal framecount As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChConfigEx Lib "BTI70864.DLL" Alias "BTI708_ChConfigEx" (ByVal configval As UInt32, ByVal count As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_ChDataCountRd Lib "BTI70864.DLL" Alias "BTI708_ChDataCountRd" (ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTI708_ChDataCountWr Lib "BTI70864.DLL" Alias "BTI708_ChDataCountWr" (ByVal countval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTI708_DllUsageCount Lib "BTI70864.DLL" Alias "BTI708_DllUsageCount" () As Int32
        Public Declare Sub BTI708_GetChanCount Lib "BTI70864.DLL" Alias "BTI708_GetChanCount" (ByRef rcvcount As Int32, ByRef xmtcount As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_HostComm Lib "BTI70864.DLL" Alias "BTI708_HostComm" (ByVal lpparam As IntPtr, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_IsChan Lib "BTI70864.DLL" Alias "BTI708_IsChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_IsRcvChan Lib "BTI70864.DLL" Alias "BTI708_IsRcvChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_IsXmtChan Lib "BTI70864.DLL" Alias "BTI708_IsXmtChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgActivityRd Lib "BTI70864.DLL" Alias "BTI708_MsgActivityRd" (ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI708_MsgActivityWr Lib "BTI70864.DLL" Alias "BTI708_MsgActivityWr" (ByVal value As UInt16, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTI708_MsgAddr Lib "BTI70864.DLL" Alias "BTI708_MsgAddr" (ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI708_MsgCommRd Lib "BTI70864.DLL" Alias "BTI708_MsgCommRd" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgCommWr Lib "BTI70864.DLL" Alias "BTI708_MsgCommWr" (ByRef msgfields As MSGFIELDS708, ByVal msgindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgConfig Lib "BTI70864.DLL" Alias "BTI708_MsgConfig" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI708_MsgCreate Lib "BTI70864.DLL" Alias "BTI708_MsgCreate" (ByVal configval As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI708_MsgOptRd Lib "BTI70864.DLL" Alias "BTI708_MsgOptRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI708_MsgOptWr Lib "BTI70864.DLL" Alias "BTI708_MsgOptWr" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
